2010-06-28  Philipp Tomsich <philipp.tomsich@theobroma-systems.com>

	* config.gcc (powerpc*-*-*): Handle titan.
	* config/rs6000/rs6000.c (titan_cost): New costs.
	(rs6000_override_options): Add "titan" to processor_target_table.
	Add Titan to branch alignment logic.
	Correctly set rs6000_cost for titan.
	* config/rs6000/rs6000.md (cpu): Add titan.  Include "titan.md".
	* config/rs6000/titan.md: New file.
	* doc/invoke.texi (RS/6000 and PowerPC Options): Document -mcpu=titan.
	
2010-06-28  Nathan Froyd  <froydnj@codesourcery.com>

	* tree-browser.c (TB_history_stack): Convert to a VEC.
	(TB_SET_HEAD): Adjust for new type of TB_history_stack.
	(TB_history_prev): Likewise.

2010-06-28  Nathan Froyd  <froydnj@codesourcery.com>

	* vec.h (vec_heap_free): Add parentheses around free.

2010-06-28  Steven Bosscher  <steven@gcc.gnu.org>

	* system.h: Poison GCC_EXCEPT_H for front-end files.

	* langhooks.h (struct lang_hooks): Add eh_protect_cleanup_actions
	langhook.
	* langhooks-def.h (LANG_HOOKS_EH_PROTECT_CLEANUP_ACTIONS) New.
	Define to NULL by default.
	* except.h: Define GCC_EXCEPT_H.
	(doing_eh): Remove prototype.
	(init_eh, init_eh_for_function): Move prototypes to toplev.h.
	(lang_protect_cleanup_actions): Remove.
	* except.c (lang_protect_cleanup_actions): Remove.
	(doing_eh): Remove.
	(gen_eh_region): Don't check doing_eh here.
	* toplev.h (init_eh, init_eh_for_function_): Moved from except.h.
	* tree-eh.c (honor_protect_cleanup_actions): Use new langhook
	instead of lang_protect_cleanup_actions.
	* omp-low.c (maybe_catch_exception): Likewise.
	* Makefile.in: Update dependencies.

2010-06-28  Bingfeng Mei <bmei@broadcom.com>

        * cgraph.h (struct varpool_node): new used_from_object_file flag.
        (struct cgraph_local_info): new used_from_object_file flag.
        * cgraph.c (dump_cgraph_node): dump used_from_object_file flag.
        (cgraph_clone_node): initialize used_from_object_file.