@@ -1,3 +1,9 @@
+2010-06-28  Jan Hubicka  <jh@suse.cz>
+
+	PR tree-optimization/44357
+	* ipa-inline.c (add_new_edges_to_heap): Do not add edges to uninlinable
+	functions.
+
 2010-06-28  Philipp Tomsich <philipp.tomsich@theobroma-systems.com>
 
 	* config.gcc (powerpc*-*-*): Handle titan.
